--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,242 @@
-.App {
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  user-select: none;
+  background: #2f2f2f
+    url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/507450/fabric.png');
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  display: grid;
+  place-content: center;
+  height: 100vh;
+}
+
+.room.lights-off {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9));
+}
+
+.room.lights-on {
+  background-image: linear-gradient(
+    rgba(255, 255, 255, 0.9),
+    rgba(255, 255, 255, 0.6)
+  );
+  filter: brightness(1.2);
+}
+
+.surround {
+  background: #111 linear-gradient(#111, #0c0c0c);
+  border-radius: 8px;
+  border: 2px solid #090909;
+  border-top: 2px solid #2b2b2b;
+  box-shadow: 0 12px 15px;
+  z-index: 1;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  width: 108px;
+  height: 190px;
+  transform: translate(-50%, -50%);
+}
+
+.room.lights-on .surround {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
+}
+
+.surround:before {
+  border-top: 1px solid rgba(255, 255, 255, 0.12);
+  margin: 0 7px;
+  position: absolute;
+  top: -2px;
+  content: '';
+  display: block;
+  width: 94px;
+}
+.surround:after {
+  background: #000;
+  border-radius: 6px;
+  border: 1px solid tint(#111, 2%);
+  border-top: none;
+  border-bottom: 2px solid #2f2f2f;
+  box-shadow: inset 0 0 8px #0c0c0c;
+  height: 172px;
+  width: 88px;
+  position: absolute;
+  top: 8px;
+  left: 9px;
+  content: '';
+  display: block;
+  z-index: 2;
+}
+
+.button {
+  background: #090302;
+  border: 1px solid black;
+  border-bottom: 6px solid black;
+  border-radius: 3px;
+  box-shadow: 0 2px 5px rgba(216, 85, 50, 0.1);
+  overflow: visible;
+  perspective: 500px;
+  height: 148px;
+  width: 72px;
+  position: relative;
+  top: 20px;
+  margin: 0 auto;
+  z-index: 10;
+}
+.button:before {
+  border: 1px solid #160804;
+  border-top: 3px solid #160804;
+  border-bottom: 2px solid #97361d;
+  border-radius: 2px;
+  background: linear-gradient(#160804, #561f10 60%, #6c2715);
+  transform: rotateX(-30deg);
+  filter: blur(1px);
+  height: 30px;
+  width: 70px;
+  position: absolute;
+  top: -6px;
+  left: 0px;
+  content: '';
+  z-index: 20;
+}
+
+.button-face {
+  cursor: pointer;
+  perspective: 700px;
   text-align: center;
+  padding-top: 53px;
+  opacity: 0.8;
+  z-index: 30;
+  position: absolute;
+  top: 25px;
+  left: -7px;
+}
+.button-face:before {
+  background: linear-gradient(rgba(216, 85, 50, 0.18) 90%, rgba(0, 0, 0, 0));
+  border-radius: 2px;
+  height: 165px;
+  width: 76px;
+  position: absolute;
+  left: 23px;
+  top: -8px;
+  content: '';
+  z-index: 1;
+}
+.button-face .shadow {
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.4),
+    rgba(0, 0, 0, 0.7) 40%,
+    rgba(0, 0, 0, 0.8),
+    transparent 85%
+  );
+  opacity: 0.8;
+  position: absolute;
+  top: 14px;
+  left: 23px;
+  height: 140px;
+  width: 80px;
+  z-index: 100;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.surround.on {
+  background: radial-gradient(
+    ellipse 85px 125px,
+    rgba(253, 64, 13, 0.14),
+    #111
+  );
+  background-image: -webkit-gradient(
+    radial,
+    center center,
+    0,
+    center center,
+    125,
+    color-stop(0, rgba(253, 64, 13, 0.14)),
+    color-stop(100, #111)
+  );
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.surround.on:after {
+  height: 170px;
+  background: #0f0f0f;
+  border: 1px solid #230d07;
+  border-top: none;
+  border-bottom: 2px solid #34130a;
+  border-top: 2px solid #34130a;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.surround.on .button {
+  background: linear-gradient(
+    #000,
+    #d52f02,
+    rgba(255, 255, 255, 0.2),
+    #3d0e08 4%,
+    #3d0e08 20%,
+    #a22402
+  );
+  border-radius: 8px;
+  border-top: none;
+  bottom: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+.surround.on .button:before {
+  background: radial-gradient(
+    ellipse 40px 18px at center -2px,
+    rgba(253, 64, 13, 0.9),
+    rgba(0, 0, 0, 0.6)
+  );
+  border-radius: 1;
+  border: 2px solid #611501;
+  border-top: none;
+  width: 68px;
+  left: 0;
+  transform: rotateX(0deg);
+  height: 29px;
+  top: 118px;
+  filter: blur(2px);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.surround.on .button-face {
+  background: radial-gradient(
+    circle 90px,
+    rgba(250, 212, 53, 0.7) 15%,
+    rgba(253, 104, 64, 0.55),
+    rgba(216, 85, 50, 0.2) 50%,
+    rgba(0, 0, 0, 0.5)
+  );
+  border-top: 1px solid rgba(253, 64, 13, 0.4);
+  transform: rotate(0deg);
+  color: transparent;
+  text-shadow: none;
+  width: 66px;
+  height: 138px;
+  padding: 0;
+  left: 21px;
+  top: 24px;
+}
+.surround.on .button-face:before {
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.4) 40%,
+    rgba(253, 64, 13, 0.5) 75%,
+    rgba(255, 255, 255, 0.3)
+  );
+  border-top: 2px solid rgba(0, 0, 0, 0.7);
+  border-left: 1px solid rgba(253, 64, 13, 0.2);
+  border-right: 1px solid rgba(253, 64, 13, 0.2);
+  top: 0;
+  left: -2px;
+  width: 69px;
+  height: 107px;
+  border-radius: 0;
+  transform: none;
+}
+.surround.on .button-face:after {
+  display: none;
+}
+.surround.on .shadow {
+  display: none;
 }
