--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+:root {
+  --room-light: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    --room-light: linear-gradient(rgba(5, 5, 5, 0.6), rgba(5, 5, 5, 0.9));
+  }
+}
+
 html,
 body {
   height: 100%;
@@ -20,7 +30,7 @@ main {
 }
 
 .room.lights-off {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9));
+  background-image: var(--room-light);
 }
 
 .room.lights-on {
